@@ -1,3 +1,7 @@
+JO-2007-04-24-0: Bugfix:      Rollback commit from JO-2007-02-05-0:
+                              Code change throws Exception when trying to edit Result
+                 Review:      JG
+
 RD-2007-04-20-0: CVS        Created V61_TAG
 -------------------------------------------
 
